[package]
name = "charty"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"
rand = "0.8"
dotenv = "0.15"