[package]
name = "charty"
version = "0.1.0"
edition = "2024"
description = "Terminal-based stock market charting and analysis"
authors = ["cyoger"]
license = "MIT"
repository = "https://github.com/cyoger/charty"
readme = "README.md"
keywords = ["stocks", "tui", "terminal", "finance", "charts"]
categories = ["command-line-utilities", "visualization"]

[package.metadata.deb]
maintainer = "cyoger"
section = "utility"
priority = "optional"
assets = [
    ["target/release/charty", "usr/bin/", "755"],
]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"
rand = "0.8"
dotenv = "0.15"